Update(UX): Update Header for club officer